# FloorPlanGenerator

./: .gitignore  CMakeLists.txt  calculator.py  cleanBuild.sh  commands.txt  configManager.sh  dependencies.txt  main.cpp  valgrind.sh
FloorPlanGenerator/: CMakeLists.txt  README.md  valgrind.sh
FloorPlanGenerator/configManager/: Makefile  configManager.cpp
FloorPlanGenerator/configs/: rooms
FloorPlanGenerator/cuda/: combine.cu  combine.cuh  combine.h  combineHandler.cpp  combineHandler.h  common.cuh  generate.cu  generate.cuh  generate.h  generateHandler.cpp  generateHandler.h  helloWorld.cu  helloWorld.h  helper.cu  helper.cuh  helper.h  process.cpp  process.h
FloorPlanGenerator/lib/: calculator.h  combination.h  combine.h  combinePostProcess.h  cvHelper.h  generate.h  globals.h  iter.h  log.h  mpHelper.h  search.h  storage.h  viewer.h
FloorPlanGenerator/logs/: valgrind-out.txt
FloorPlanGenerator/src/: calculator.cpp  combine.cpp  combinePostProcess.cpp  cvHelper.cpp  generate.cpp  iter.cpp  log.cpp  main.cpp  mpHelper.cpp  search.cpp  storage.cpp  viewer.cpp
configManager/: Makefile  adj.csv  adjreq.csv  adjreq_human.csv  config  configManager.cpp  rplanny_adj.csv  study.py
configs/: adj  reqadj  rooms
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  calculator.rst  combination.rst  conf.py  cvHelper.rst  generate.rst  globals.rst  index.rst  iter.rst  log.rst  main.rst  mpHelper.rst  storage.rst
learning/armadillo/: CMakeLists.txt  main.cpp  test
learning/boost/: main.cpp  multiarray.cpp
learning/csv/: adj.csv  main  main.cpp
learning/cudaHelloWorld/: CMakeCache.txt  CMakeLists copy 2.txt  CMakeLists copy.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  gpu.cu  gpu.h  main  main.cu
learning/cudaLink/: helloWorld.cu  helloWorld.h  main.cpp  nvcc_help.txt  v3.cu
learning/onetbb_pipeline/: CMakeLists.txt  main.cpp
learning/opencvExample/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
learning/openmpExample/: main  main.c  perm  perm.cpp
learning/openmpProducerConsumer/: main.cpp  main2.cpp
learning/openmpQueue/: main  main copy.c  main.c
lib/: avl_array.h  globals.h  log.h
src/: combination.cpp  log.cpp  main.cpp  storage.cpp
storageViewer/: CMakeLists.txt  viewer.cpp
